[package]
name = "a2a-example"
edition = "2021"


[dependencies]
vrs-core-sdk = { path = "../core-sdk" }
hex = "0.4"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "5.5"
# anyhow for simple error handling in main, thiserror for library-style errors
anyhow = "1.0"
thiserror = "1.0"
parity-scale-codec = { version = "3.6", features = ["derive"] }

[lib]
crate-type = ["cdylib"]
[workspace]
