[package]
name = "vrs-core-sdk"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true
readme.workspace = true

[dependencies]
paste = "1.0"
vrs-core-macros = { path = "../core-sdk-macros", version = "0.0.1" }
anyhow = { version = "1", default-features = false }
codec = { features = ["derive"], package = "parity-scale-codec", version = "3.6.12", default-features = false }
sp-core = { features = ["serde"], version = "34.0.0", default-features = false }
hex = { version = "0.4.3", default-features = false }
