[package]
name = "vrs-core-sdk"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true
readme.workspace = true

[dependencies]
vrs-core-macros = { path = "../core-sdk-macros", version = "0.1.0" }
codec = { features = ["derive"], package = "parity-scale-codec", version = "3.6", default-features = false }
sp-core = { features = ["serde"], version = "34.0", default-features = false }

[features]
std = [
    "sp-core/std",
    "codec/std",
]
default = ["std"]

[package.metadata.docs.rs]
features = ["std"]
all-features = true
