[package]
name = "vrs-core-sdk"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true
readme.workspace = true

[dependencies]
vrs-core-macros = { path = "../core-sdk-macros" }
sp-core = { features = ["serde"], version = "34.0", default-features = false }
codec = { features = ["derive"], package = "parity-scale-codec", version = "3.6", default-features = false }
scale-info = { features = ["derive", "serde"], version = "2.11", default-features = false }
lazy_static = "1.5"
serde = { version = "1.0", features = ["derive"], default-features = false, optional = true }
serde_json = { version = "1.0", default-features = false, optional = true }
schemars = { version = "1.0", default-features = false, optional = true }

[features]
std = [
    "sp-core/std",
    "codec/std",
    "scale-info/schema",
    "serde",
    "serde_json",
    "schemars",
]
default = []

[package.metadata.docs.rs]
features = ["std"]
all-features = true
