[package]
name = "export-example"
edition = "2021"


[dependencies]
vrs-core-sdk = { path = "../core-sdk", version = "0.1.0" }
hex = "0.4"
sha2 = "0.10"
codec = { features = [
    "derive",
], package = "parity-scale-codec", version = "3.6", default-features = false }

[lib]
crate-type = ["cdylib"]
