[package]
name = "nucleus-abigen"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]

clap = { version = "4.4.8", features = ["derive"] }
serde_json = "1.0.107"
glob = "0.3.1"                                      # For file pattern matching
